Apply suggestion from code review